--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,6 +15,7 @@
 <link rel="stylesheet" href="{{ site.baseurl }}/css/animate.css" />
 <link rel="stylesheet" href="{{ site.baseurl }}/css/responsive.css" />
 <link rel="stylesheet" href="{{ site.baseurl }}/css/syntax.css" />
+<link rel="stylesheet" href="{{ site.baseurl }}/css/searchbar.css" />
 
 <!-- Js -->
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
@@ -28,6 +29,8 @@
 
 <script src="{{ site.baseurl }}/js/main.js"></script>
 
+<!-- jekyll simple search js -->
+<script src="{{site.baseurl}}/js/simple-jekyll-search.min.js"></script>
 <!--
 /*
  * Airspace
