--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,6 +17,7 @@
 <link rel="stylesheet" href="{{ site.baseurl }}/css/syntax.css" />
 <link rel="stylesheet" href="{{ site.baseurl }}/css/searchbar.css" />
 <link rel="stylesheet" href="{{ site.baseurl }}/css/category.css" />
+<link rel="stylesheet" href="{{ site.baseurl }}/css/category-left.css" />
 
 <!-- Js -->
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
