--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,35 +2,35 @@
 <header>
 	<div class="container">
 		<div class="row">
-			<div class="col-md-12">
-				<!-- header Nav Start -->
-				<nav class="navbar navbar-default">
-					<div class="container-fluid">
-						<!-- Brand and toggle get grouped for better mobile display -->
-						<div class="navbar-header">
-							<button type="button" class="navbar-toggle collapsed"
-								data-toggle="collapse"
-								data-target="#bs-example-navbar-collapse-1">
-								<span class="sr-only">Toggle navigation</span> <span
-									class="icon-bar"></span> <span class="icon-bar"></span> <span
-									class="icon-bar"></span>
-							</button>
-						</div>
-						<!-- Collect the nav links, forms, and other content for toggling -->
-						<div class="collapse navbar-collapse"
-							id="bs-example-navbar-collapse-1">
-							<ul class="nav navbar-nav navbar-right">
-								<li><a href="{{ site.baseurl }}/">Home</a></li>
-								<li><a href="{{ site.baseurl }}/blog">Blog</a></li>
-								<li><a href="{{ site.baseurl }}/contact">Contact</a></li>
-								<li><a href="{{ site.baseurl }}/project">Project</a></li>
-							</ul>
-						</div>
-						<!-- /.navbar-collapse -->
+			<!-- header Nav Start -->
+			<nav class="navbar navbar-default">
+				<!-- Brand and toggle get grouped for better mobile display -->
+				<div class="navbar-header">
+					<button type="button" class="navbar-toggle collapsed"
+						data-toggle="collapse"
+						data-target="#bs-example-navbar-collapse-1">
+						<span class="sr-only">Toggle navigation</span> <span
+							class="icon-bar"></span> <span class="icon-bar"></span> <span
+							class="icon-bar"></span>
+					</button>
+				</div>
+				<!-- Collect the nav links, forms, and other content for toggling -->
+				<div class="collapse navbar-collapse"
+					id="bs-example-navbar-collapse-1">
+					<ul class="nav navbar-nav navbar-left">
+						<li><a href="{{ site.baseurl }}/">Home</a></li>
+						<li><a href="{{ site.baseurl }}/blog">Blog</a></li>
+						<li><a href="{{ site.baseurl }}/contact">Contact</a></li>
+						<li><a href="{{ site.baseurl }}/project">Project</a></li>
+					</ul>
+					<div id="search-body">
+						<span class="search-icon"><i class="fa fa-search"></i></span>
+						<span class="search-input"><input type="text" id="search-input" size="50%" placeholder="Search......." /></span>
+						<ul id="results-container"></ul>
 					</div>
-					<!-- /.container-fluid -->
-				</nav>
-			</div>
+				</div>
+				<!-- /.navbar-collapse -->
+			</nav>
 		</div>
 	</div>
 </header>
