--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -1,25 +1,28 @@
 ---
 layout: default
 ---
-{% include category-header.html %}
-<!-- HTML elements for search -->
-<div id="search-container">
-    <div id="search-body">
-        <span class="search-icon"><i class="fa fa-search"></i></span>
-        <span class="search-input"><input type="text" id="search-input" size="50%" placeholder="Search......." /></span>
-        <ul id="results-container"></ul>
+
+{% include topCategory.html %}
+
+<div class="container">
+    <div class="row">
+        <div class="col-xs-3">
+            {% include category-left.html %}
+        </div>
+        <div class="col-xs-9">
+            {% assign category = page.category | default : page.title %}
+            {% for post in site.categories[category] %}
+            <div class="post-area">
+                <a href="{{ post.url | prepend: site.baseurl }}" class="bold">{{ post.title }}</a>
+                <p class="post-date">{{ post.date | date_to_long_string }}</p>
+                <p>
+                    {{ post.content | strip_html | truncatewords: 50 }}
+                </p>
+            </div>
+            {% endfor %}
+        </div>
     </div>
 </div>
-{% assign category = page.category | default : page.title %}
-{% for post in site.categories[category] %}
-<div class="post-area">
-    <a href="{{ post.url | prepend: site.baseurl }}" class="bold">{{ post.title }}</a>
-    <p class="post-date">{{ post.date | date_to_long_string }}</p>
-    <p>
-        {{ post.content | strip_html | truncatewords: 50 }}
-    </p>
-</div>
-{% endfor %}
 <script type="text/javascript">
   SimpleJekyllSearch({
     searchInput: document.getElementById('search-input'),
