- 디자인 변경 및 카테고리 구조 변경

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,9 +19,9 @@
 					id="bs-example-navbar-collapse-1">
 					<ul class="nav navbar-nav navbar-left">
 						<li><a href="{{ site.baseurl }}/">Home</a></li>
-						<li><a href="{{ site.baseurl }}/blog">Blog</a></li>
+						<li><a href="{{ site.baseurl }}/blog/index">Blog</a></li>
 						<li><a href="{{ site.baseurl }}/contact">Contact</a></li>
-						<li><a href="{{ site.baseurl }}/project">Project</a></li>
+						<!--<li><a href="{{ site.baseurl }}/project">Project</a></li>-->
 					</ul>
 					<div id="search-body">
 						<span class="search-icon"><i class="fa fa-search"></i></span>
