--- a/_includes/topCategory.html
+++ b/_includes/topCategory.html
@@ -1,8 +1,8 @@
 <div id="container">
     <div class="site-category">
         <ul>
-            <li><a href="{{ site.baseurl }}/blog">Developer</a></li>
-            <li><a href="{{ site.baseurl }}/itNews">IT News</a></li>
+            <li><a href="{{ site.baseurl }}/blog/index">Development</a></li>
+            <!--<li><a href="{{ site.baseurl }}/news/index">IT News</a></li>-->
         </ul>
     </div>
 </div>
