--- a/_includes/head.html
+++ b/_includes/head.html
@@ -50,3 +50,13 @@
     enable_page_level_ads: true
   });
 </script>
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-148997399-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-148997399-1');
+</script>
