--- a/_includes/head.html
+++ b/_includes/head.html
@@ -43,6 +43,9 @@
  *
  */
 -->
+
+<script data-ad-client="ca-pub-4307985305136957" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 <script>
   (adsbygoogle = window.adsbygoogle || []).push({
