- fix search bar

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -23,11 +23,13 @@
 						<li><a href="{{ site.baseurl }}/contact">Contact</a></li>
 						<!--<li><a href="{{ site.baseurl }}/project">Project</a></li>-->
 					</ul>
-					<div id="search-body">
-						<span class="search-icon"><i class="fa fa-search"></i></span>
-						<span class="search-input"><input type="text" id="search-input" size="50%" placeholder="Search......." /></span>
-						<ul id="results-container"></ul>
-					</div>
+				</div>
+				<div id="search-body">
+					<span class="search-icon"><i class="fa fa-search"></i></span>
+					<span class="search-input">
+								<input type="text" id="search-input" size="30%" placeholder="Search......." />
+						</span>
+					<ul id="results-container"></ul>
 				</div>
 				<!-- /.navbar-collapse -->
 			</nav>
