--- a/_layouts/category.html
+++ b/_layouts/category.html
@@ -8,7 +8,7 @@ layout: default
     {% assign category = page.category | default : page.title %}
     <div class="row">
         <div class="col-xs-3">
-            {% if category == "JPA" or category == "Java" or category == "Exception" or category == "DevOps" or category == "Algorithm" or category == "others" or category =="kotlin" or category == "Spring"%}
+            {% if category != "New Items" %}
                 {% include category-left.html %}
             {% elsif category == "New Items" %}
                 {% include itNews-leftMenu.html %}
