--- a/_includes/category-left.html
+++ b/_includes/category-left.html
@@ -5,7 +5,7 @@
         {% for node in pages_list %}
             {% if node.title != null %}
                 {% if node.layout == "category" %}
-                    {% if node.title != ""New Items" %}
+                    {% if node.title != "New Items" %}
                     <li>
                     <a class="category-link {% if page.url == node.url %} active {% endif %}"
                        href="{{ site.baseurl }}{{ node.url }}">{{ node.title }}</a>
